# smart_class

./: CONTEXT.md  README.md  pytest.ini
cloud/: requirements.txt  run_cloud_windows.ps1
cloud/config/: cloud_config.yaml
cloud/data/: .gitignore
cloud/src/: __init__.py  app.py  config.py  doctor.py  edge_report_pb2.py  edge_report_pb2_grpc.py  grpc_server.py  log.txt  main.py  mqtt_client.py  status_reporter.py  task_handler.py
cloud/src/inference/: __init__.py  behavior_engine.py
cloud/src/report/: __init__.py  generator.py  http_server.py
device/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  edge_compute_device.cpp  log.txt  mqtt_client.cpp  mqtt_client.h  offline_cache.h  task_queue.cpp
device/src/: S99user  log.txt
device/web/: index.html
device_copyed/: app.h  auto.sh  config.h  edge_compute_device.cpp  gpio_handler.cpp  gpio_handler.h  heartbeat.h  inference_engine.h  mmf_pipeline.cpp  mmf_pipeline.h  mqtt_client.cpp  task_queue.h
device_copyed/config/: milkv_config.yaml
docs/: ARCHITECTURE.md  ATLAS_DEV_GUIDE.md  CLOUD_WINDOWS_GUIDE.md  ISSUES.md  PLATFORM_MILKV_DUO256M.md  PRD_DEVICE_SIDE.md  REQUIREMENTS.md  TODO_CLOUD.md  TODO_DEVICE.md  TODO_EDGE.md  WORK_SUMMARY.md
edge/: requirements.txt
edge/config/: edge_config.yaml  schedule.json
edge/data/: edge.db-shm  edge.db-wal
edge/data/face_lib/: students.json
edge/data/face_lib/embeddings/: 2024001.npy
edge/models/: retinaface.om
edge/src/: experiment.py  face_lib.py  grpc_client.py  log.txt  main.py  mqtt_client.py  policy.py  schedule_loader.py  scheduler.py  session_manager.py  task_manager.py  test_models.py
edge/src/api/: routes.py  server.py  sse.py
edge/src/db/: connection.py  models.py  repository.py  schema.sql
edge/src/inference/: behavior_engine.py  face_engine.py  inference_service.py
edge/src/proto/: edge_report.proto  edge_report_pb2.py  edge_report_pb2_grpc.py
env/: libpaho-mqtt3a.so.1.3.16
libmicrohttpd/lib/: libmicrohttpd.la  libmicrohttpd.so.12.62.3
libmicrohttpd/lib/pkgconfig/: libmicrohttpd.pc
tdl_sdk/: CMakeLists.txt  log.txt
tdl_sdk/cmake/: microhttpd.cmake  paho_mqtt.cmake
tdl_sdk/modules/app/person_capture/: person_capture.c
tdl_sdk/sample/edge_compute_device/: app.cpp  app.h  config.cpp  edge_compute_device.cpp  heartbeat.cpp  http_server.cpp  http_server.h  inference_engine.cpp  mqtt_client.cpp  mqtt_client.h  offline_cache.cpp
tdl_sdk/sample_video/: CMakeLists.txt  sample_vi_pd.c  vi_vo_utils.c
test/: log.txt
test/cloud/: conftest.py  fakes.py  test_app.py  test_behavior_engine.py  test_config.py  test_doctor.py  test_grpc_server.py  test_integration.py  test_main.py  test_mqtt_client.py  test_report_generator.py  test_report_http_server.py  test_requirements.py  test_status_reporter.py  test_task_handler.py  test_windows_guide.py  test_windows_scripts.py
test/edge/: conftest.py  test_mqtt_client.py  test_scheduler_cloud_adapter.py  test_task_manager_payload_cache.py
test/integration/: test_cloud_broker_link.py
